# cscall

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/: README.md  build_hiacc_manifests.py  build_svarah_manifest.py  download_svarah.py
docs/superpowers/findings/: 2026-06-15-phase1-finetune-findings.md
docs/superpowers/plans/: 2026-06-12-phase0-scaffold-data-baseline.md  2026-06-12-phase1-lora-finetune.md  2026-06-21-phase2-streaming-completion.md  2026-06-21-phase3-diarization-fusion.md  2026-06-22-phase4-upload-ui.md  2026-06-22-phase5-live-transcription.md
docs/superpowers/specs/: 2026-06-12-streaming-codeswitch-asr-design.md  2026-06-21-phase2-streaming-completion-design.md  (+3 more)
notebooks/: phase1_finetune_colab.ipynb
results/: baseline_hiacc_test.md  phase1_finetune_compare.md
src/cscall/: asr_baseline.py  cli.py  compare.py  diarization.py  eval_runner.py  fusion.py  live.py  manifest.py  metrics.py  normalize.py  webapp.py
tests/: test_asr_baseline.py  test_build_hiacc.py  test_build_svarah.py  test_cli.py  test_compare.py  test_cs_density.py  test_diarization.py  test_download_svarah.py  test_endpointing.py  test_eval_runner.py  test_export_ct2.py  test_finetune_config.py  test_finetune_dataset.py  test_fusion.py  test_live.py  test_local_agreement.py  test_manifest.py  test_metrics.py  test_normalize.py  test_notebook_structure.py  test_smoke.py  test_speaker_cli.py  test_streaming_audio.py  test_streaming_cli.py  test_streaming_metrics.py  test_streaming_session.py  test_webapp.py
tests/fixtures/: mini_manifest.jsonl
(+10 files in other folders)
