[project]
name = "cscall"
version = "0.0.1"
description = "Real-time speaker-attributed code-switch ASR for support calls"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "jiwer>=3.0.0",
    "indic-transliteration>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
